--- a/index_old.html
+++ b/index_old.html
@@ -93,7 +93,7 @@ body {
 }
 .typing-text {
   display: inline-block;
-  overflow: hidden;
+  overflow: auto;
   white-space: pre-wrap;
   border-right: 2px solid #00ff00;
   animation: blink 0.75s step-end infinite;
