--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   const commands = {
     "about": `ABOUT
 <div class="about-container">
-  <img src="" alt="Your face" />
+  <img src="Headshot.png" alt="Your face" />
   <div>
     My name's Kyle. I'm a Computer Engineer with a lot of drive to create infrastructure that's 'sexy'. My previous role was at the Royal Bank of Canada as a Senior Developer on the Openshift team. I'm currently looking for a new position in the start-up world. I graduated from Queens University in 2021 with a BASC in Computer Engineering.
   </div>
