--- a/index_updated.html
+++ b/index_updated.html
@@ -206,21 +206,17 @@ LinkedIn: https://linkedin.com/in/yourprofile`,
       setTimeout(() => {
         typeLineSlow("I'm Kyle.", () => {
           setTimeout(() => {
-            typeLineSlow("This is my website. \nYou'll notice that it's also a terminal.", () => {
+            typeLineSlow("This is my website. You'll notice that it's also a terminal.", () => {
               setTimeout(() => {
                 const asciiSection = `
 <div class="ascii-banner">
   <img src="Headshot.png" alt="Kyle headshot" class="intro-img"/>
   <pre>
-
-██   ██ ██    ██ ██      ███████     ██████  ██████  ██    ██  ██████ ███████            ██  ██████  ███    ██ ███████ ███████ 
-██  ██   ██  ██  ██      ██          ██   ██ ██   ██  ██  ██  ██      ██                 ██ ██    ██ ████   ██ ██      ██      
-█████     ████   ██      █████       ██████  ██████    ████   ██      █████   █████      ██ ██    ██ ██ ██  ██ █████   ███████ 
-██  ██     ██    ██      ██          ██      ██   ██    ██    ██      ██            ██   ██ ██    ██ ██  ██ ██ ██           ██ 
-██   ██    ██    ███████ ███████     ██      ██   ██    ██     ██████ ███████        █████   ██████  ██   ████ ███████ ███████ 
-                                                                                                                               
-                                                                                                                               
-
+   _  __     _      ____   _____ 
+  | |/ /__ _| |__  |  _ \ | ____|
+  | ' // _\` | '_ \ | | | ||  _|  
+  | . \ (_| | |_) || |_| || |___ 
+  |_|\_\__,_|_.__/ |____(_)_____|
   </pre>
 </div>
 `;
