--- a/index_fixed.html
+++ b/index_fixed.html
@@ -224,7 +224,7 @@ LinkedIn: https://linkedin.com/in/yourprofile`,
 </div>
 `;
                 printOutput(asciiSection, false);
-                printOutput("Hint: Type 'about',  'skills', 'resume', 'projects', 'contact info' or 'contact me'", false);
+                printOutput("Hint: Type 'about', 'skills', 'projects', 'contact info' or 'contact me'", false);
                 printOutput("Other commands: clear, help, theme", false);
                 addPrompt();
               }, 500);
