--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 3. Secure AWS Cloud — Built WAF-protected infra with CloudTrail`,
 
     "contact info": `CONTACT INFO
-Email: your.email@example.com
-GitHub: https://github.com/yourusername
-LinkedIn: https://linkedin.com/in/yourprofile`,
+Email: kyledprycejones@gmail.com
+GitHub: https://github.com/kyledprycejones
+LinkedIn: https://linkedin.com/in/kyle-pryce-jones`,
 
     "contact me": `CONTACT FORM
-<form class="contact-form" action="https://formspree.io/f/your_form_id" method="POST">
+<form class="contact-form" action="https://formspree.io/f/xwpqlzegd" method="POST">
   <label>Your Email:</label><input type="email" name="email" required>
   <label>Subject:</label><input type="text" name="subject" required>
   <label>Message:</label><textarea name="message" rows="4" required></textarea>
