--- a/index.html
+++ b/index.html
@@ -152,20 +152,27 @@
     "about": `ABOUT
 <div class="about-container">
   <div>
-    My name's Kyle. I'm a Computer Engineer with a lot of drive to create smart infrastructure. I am fluent in a wide array of languages. I'm currently wroking towards compelting the RHCSA. My previous role was at the Royal Bank of Canada as a Senior Developer on the Openshift team. I'm currently looking for a new position in the start-up world. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
+  My name's Kyle. I'm a Computer Engineer with a lot of drive to create smart infrastructure and AI solutions. I have been coding since I was kid, and now get to work on amazing software projects as an adult. I'm currently seeking work in a start-up environment while working towards completing the RHCSA. I previously worked at the Royal Bank of Canada as a Senior Developer on the Openshift team. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
   </div>
 </div>`,
 
     "skills": `SKILLS
-- Python: Backend scripting, automation
-- JavaScript: React, Node.js
-- AWS: Infrastructure & WAF
-- OpenShift: Container orchestration, GitOps`,
+
+I am fluent in a wide array of languages and technologies. I particularly excel at projects that require Kubernetes/Openshift, Bash, Python and Github actions.
+But I also have a lot of experience with the following:
+
+- Languages: Java, JavaScript, TypeScript, Go, C/C++, Bash
+- DevOps: Docker, Kubernetes, OpenShift, Ansible, Terraform
+- Cloud: AWS, Azure, GCP
+- CI/CD: GitHub Actions, ArgoCD, Jenkins`,
+
+
 
     "projects": `PROJECTS
-1. OpenShift Cluster Upgrade — Automated w/ Ansible + ArgoCD
-2. GitOps CI/CD — Kubernetes-based delivery using ArgoCD
-3. Secure AWS Cloud — Built WAF-protected infra with CloudTrail`,
+1. Homelab - A personal homelab run on a n100 and Synology diskstation. Uses proxmox to provide a k3s cluster and connected to a cloudflare tunnel. Hosts various apps, like the 'Arr's' and Minecraft.
+2. FunCloud - Another homelab service built on raspberry pi's.
+3. Kyle OS - This website! A terminal interface that showcases my resume and skills. Did you know I built this over the course of one day?`,
+
 
     "contact info": `CONTACT INFO
 Email: kyledprycejones@gmail.com
@@ -173,7 +180,7 @@ GitHub: https://github.com/kyledprycejones
 LinkedIn: https://linkedin.com/in/kyle-pryce-jones`,
 
     "contact me": `CONTACT FORM
-<form class="contact-form" action="https://formspree.io/f/xwpqlzegd" method="POST">
+<form class="contact-form" action="https://formspree.io/f/xwpqlzeg" method="POST">
   <label>Your Email:</label><input type="email" name="email" required>
   <label>Subject:</label><input type="text" name="subject" required>
   <label>Message:</label><textarea name="message" rows="4" required></textarea>
