--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     "about": `ABOUT
 <div class="about-container">
   <div>
-  My name's Kyle. I'm a Computer Engineer with a lot of drive to create smart infrastructure and AI solutions. I have been coding since I was kid, and now get to work on amazing software projects as an adult. I'm currently seeking work in a start-up environment while working towards completing the RHCSA. I previously worked at the Royal Bank of Canada as a Senior Developer on the Openshift team. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
+  My name's Kyle. I'm a computer engineer with a focus on building AI-led infra. I have been coding since I was kid, and now get to work on amazing software projects as an adult. I'm currently seeking work in a start-up environment while working towards completing the RHCSA/RHCE. I previously worked at the Royal Bank of Canada as a Senior Developer on the Openshift team. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
   </div>
 </div>`,
 
@@ -161,15 +161,15 @@
 I am fluent in a wide array of languages and technologies. I particularly excel at projects that require Kubernetes/Openshift, Bash, Python and Github actions.
 But I also have a lot of experience with the following:
 
-- Languages: Java, JavaScript, TypeScript, Go, C/C++, Bash
-- DevOps: Docker, Kubernetes, OpenShift, Ansible, Terraform
-- Cloud: AWS, Azure, GCP
+- Languages: Python, Java, JavaScript, TypeScript, Go, C/C++, Bash
+- DevOps: Docker, Ansible, Terraform
+- Cloud: AWS, Azure, GCP, Openshift Architecture
 - CI/CD: GitHub Actions, ArgoCD, Jenkins`,
 
 
 
     "projects": `PROJECTS
-1. Homelab - A personal homelab run on a n100 and Synology diskstation. Uses proxmox to provide a k3s cluster and connected to a cloudflare tunnel. Hosts various apps, like the 'Arr's' and Minecraft.
+1. Homelab - A personal homelab proxmox cluster with a domain. Used to host ai workloads.
 2. FunCloud - Another homelab service built on raspberry pi's.
 3. Kyle OS - This website! A terminal interface that showcases my resume and skills. Did you know I built this over the course of one day?`,
 
