--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     "about": `ABOUT
 <div class="about-container">
   <div>
-  My name's Kyle. I'm a computer engineer with a focus on building AI-led infra. I have been coding since I was kid, and now get to work on amazing software projects as an adult. I'm currently seeking work in a start-up environment while working towards completing the RHCSA/RHCE. I previously worked at the Royal Bank of Canada as a Senior Developer on the Openshift team. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
+  My name's Kyle. I'm a computer engineer with a focus on building enterprise-ready, AI-led infrastructure. I have been coding since I was kid, and now get to work on amazing software projects as an adult. I'm currently seeking work in a start-up environment while working towards completing the RHCSA/RHCE. I previously worked at the Royal Bank of Canada as a Senior Developer on the Openshift team. I graduated from Queens University in 2021 with a BASc. in Computer Engineering.
   </div>
 </div>`,
 
