--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@ But I also have a lot of experience with the following:
 
 
     "projects": `PROJECTS
-1. Homelab - A personal homelab proxmox cluster with a domain. Used to host ai workloads.
+1. Homelab - A personal homelab proxmox cluster with a domain. Used to host ai workloads. https://github.com/kyledprycejones/homelab
 2. FunCloud - Another homelab service built on raspberry pi's.
-3. Kyle OS - This website! A terminal interface that showcases my resume and skills. Did you know I built this over the course of one day?`,
+3. Kyle OS - This website! A terminal interface that showcases my resume and skills. Did you know I built this over the course of one day?
+4. eatmatts.com - Site maintenance and UI changes for a sucessful biltong Shopify business`,
 
 
     "contact info": `CONTACT INFO
